# bthome-rs

./: Cargo.toml
.github/workflows/: build_and_test.yml
src/: encryption.rs  lib.rs
