[package]
name = "bthome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyvec = { version = "1", features = ["rustc_1_40"] }
aes = { version = "0.8", optional = true }
ccm = { version = "0.5", optional = true }

[features]
std = []
encryption = ["dep:aes", "dep:ccm"]
default = ["encryption"]