[package]
name = "bthome"
version = "0.0.1"
authors = ["Mathieu Velten <matmaul@gmail.com>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
keywords = ["no_std", "no-std"]
categories = ["no-std"]

[dependencies]
tinyvec = { version = "1", features = ["rustc_1_40"] }
aes = { version = "0.8", optional = true }
ccm = { version = "0.5", optional = true }

[features]
std = []
encryption = ["dep:aes", "dep:ccm"]
default = ["encryption"]
